[gd_scene load_steps=5 format=2]

[ext_resource path="res://AstronautA.png" type="Texture" id=1]
[ext_resource path="res://Character/Corpse.gd" type="Script" id=2]
[ext_resource path="res://dead-head.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 86.2526
height = 184.282

[node name="Corpse" type="Area2D"]
script = ExtResource( 2 )

[node name="CorpseSprite" type="Sprite" parent="."]
position = Vector2( 3.06842, -8.24481 )
scale = Vector2( 0.250101, 0.236207 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.72, 0.68 )
shape = SubResource( 1 )

[node name="dead-head" type="Sprite" parent="."]
position = Vector2( -5.11896, -82.7465 )
scale = Vector2( 0.154778, 0.146179 )
texture = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Corpse_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Corpse_area_exited"]
